--- a/src/posts/01_予測/01_スクレイピングとデータ整形.md
+++ b/src/posts/01_予測/01_スクレイピングとデータ整形.md
@@ -1,8 +1,10 @@
 ---
-title: '1.スクレイピングとデータ整形'
-date: '2023/05/01'
-slug: 'predict'
-type: 'predict'
+title: 'スクレイピング'
+created: '2023/01/01'
+update: '2023/02/01'
+tags: 
+    - 競馬予想
+    - Python
 ---
 
 PythonのPandasを使って競馬のデータ整形を行う方法についてご紹介します。
