--- a/src/posts/01_予測/02_特徴量エンジニアリング.md
+++ b/src/posts/01_予測/02_特徴量エンジニアリング.md
@@ -1,7 +1,10 @@
 ---
-title: '2.特徴量エンジニアリング'
-date: '2023/05/10'
-slug: 'predict'
+title: '特徴量エンジニアリング'
+created: '2023/01/01'
+update: '2023/03/01'
+tags: 
+    - 競馬予想
+    - Python
 ---
 
 前回の記事では、netkeibaから取得したレース情報をスクレイピングし、Pandasを使ってデータ整形を行いました。今回は、整形されたデータをもとに競馬予想システムの構築に進みます。
