--- a/src/posts/01_予測/06_特徴量の追加.md
+++ b/src/posts/01_予測/06_特徴量の追加.md
@@ -1,7 +1,10 @@
 ---
-title: '6.特徴量の追加'
-date: '2023/05/20'
-slug: 'predict'
+title: '特徴量の追加'
+created: '2023/01/01'
+update: '2023/07/01'
+tags: 
+    - 競馬予想
+    - Python
 ---
 
 
