--- a/src/posts/01_予測/07_競馬予想システムの応用と発展.md
+++ b/src/posts/01_予測/07_競馬予想システムの応用と発展.md
@@ -1,7 +1,10 @@
 ---
-title: '7.競馬予想システムの応用と発展'
-date: '2023/05/20'
-slug: 'predict'
+title: '競馬予想の応用'
+created: '2023/01/01'
+update: '2023/08/01'
+tags: 
+    - 競馬予想
+    - Python
 
 ---
 
