--- a/src/posts/02_生成AI/01_生成AI.md
+++ b/src/posts/02_生成AI/01_生成AI.md
@@ -1,17 +1,21 @@
 ---
 title: '生成AI'
-date: '2023/05/01'
-slug: 'GenerativeAI'
----
-<!-- ［Ctrl］＋［K］→［V］ -->
+created: '2023/08/13'
+update: '2023/08/13'
+tags: 
+    - AI
+    - Python
 
-# Web UIのインストール
+# ［Ctrl］＋［K］→［V］
+---
+
+## Web UIのインストール
 
 ``` console
 git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui.git
 ```
 
-# ConcrolNetと日本語拡張のインストール
+## ConcrolNetと日本語拡張のインストール
 
 「Extensions」> 「Install from URL」>「URL for extesion’s git repository」
  - https://github.com/Mikubill/sd-webui-controlnet
