--- a/src/posts/01_予測/03_モデル構築.md
+++ b/src/posts/01_予測/03_モデル構築.md
@@ -1,7 +1,10 @@
 ---
-title: '3.モデル構築'
-date: '2023/05/11'
-slug: 'predict'
+title: 'モデル構築'
+created: '2023/01/01'
+update: '2023/04/01'
+tags: 
+    - 競馬予想
+    - Python
 ---
 
 
