--- a/src/posts/01_予測/04_パラメータチューニング.md
+++ b/src/posts/01_予測/04_パラメータチューニング.md
@@ -1,7 +1,10 @@
 ---
-title: '4.パラメータチューニング'
-date: '2023/05/11'
-slug: 'predict'
+title: 'パラメータチューニング'
+created: '2023/01/01'
+update: '2023/05/01'
+tags: 
+    - 競馬予想
+    - Python
 
 ---
 
