--- a/src/posts/01_予測/05_予測結果の解析.md
+++ b/src/posts/01_予測/05_予測結果の解析.md
@@ -1,7 +1,10 @@
 ---
-title: '5.予測結果の解析'
-date: '2023/05/20'
-slug: 'predict'
+title: '予測結果の解析'
+created: '2023/01/01'
+update: '2023/06/01'
+tags: 
+    - 競馬予想
+    - Python
 
 ---
 
